# poe2-log-viewer

./: .gitignore  README.md  index.html  package.json  plan.md  research.md  tailwind.config.js  tsconfig.json
.github/: copilot-instructions.md
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: log_categorizer.rs  main.rs
src/components/: FilterPanel.tsx  LogViewer.tsx
