[package]
name = "poe2-log-viewer"
version = "0.1.2"
description = "Path of Exile 2 Log Viewer"
authors = ["juddisjudd"]
license = "MIT"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0", features = ["codegen"] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "6.1"
tokio = { version = "1.37", features = ["full"] }
open = "5.0"
